--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,10 @@
       box-sizing: border-box;
     }
 
+    html{
+      scroll-behavior: smooth;
+    }
+
     .link{
       text-decoration: none;
       color: black;
